# lu_base_ws

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.sharpmake.cs  vcpkg_dependencies.sharpmake.cs  workspace.sharpmake.cs
cmake/: CPM.cmake  Config.cmake.in  PackageProject.cmake
patches/: CrossWindow.patch  CrossWindowGraphics.patch  FlyCube.patch
